--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,7 +75,8 @@
         "__string": "cpp",
         "chrono": "cpp",
         "algorithm": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "__availability": "cpp"
     },
     "makefile.launchConfigurations": [
         {
