Serialized not working, but made some other changes to the algorithm which should improve stability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,13 +19,9 @@ if (NOT raylib_FOUND)
 endif()
 
 
-
-FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz)
-FetchContent_MakeAvailable(json)
-
 include_directories(include)
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Analogsim main.cpp component.cpp component.h gui.h gui.cpp)
+add_executable(Analogsim main.cpp component.cpp component.h gui.h gui.cpp serializer.cpp serializer.h)
 
-target_link_libraries(Analogsim raylib nlohmann_json::nlohmann_json)
+target_link_libraries(Analogsim raylib)
