--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,6 @@ endif()
 include_directories(include)
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Analogsim main.cpp main.h component.cpp component.h gui.h gui.cpp serializer.cpp serializer.h parts/sensor.cpp parts/sensor.h settings.h parts/plus.cpp parts/plus.h parts/dial.cpp parts/dial.h parts/plus.cpp)
+add_executable(Analogsim main.cpp main.h component.cpp component.h gui.h gui.cpp serializer.cpp serializer.h parts/sensor.cpp parts/sensor.h settings.h parts/plus.cpp parts/plus.h parts/dial.cpp parts/dial.h parts/plus.cpp parts/average.cpp parts/average.h parts.h)
 #target_compile_options(Analogsim PRIVATE -Wall -Wextra -Wpedantic -Werror)
 target_link_libraries(Analogsim raylib)
