changed some things

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 find_package(raylib ${RAYLIB_VERSION} QUIET)
 
 
-
 if (NOT raylib_FOUND)
     include(FetchContent)
     # Include CMake's FetchContent module to download and build raylib
@@ -19,7 +18,7 @@ if (NOT raylib_FOUND)
             URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
     )
     FetchContent_MakeAvailable(raylib)
-endif()
+endif ()
 
 
 include_directories(include)
@@ -27,6 +26,10 @@ set(CMAKE_CXX_STANDARD 23)
 
 add_executable(Analogsim main.cpp main.h component.cpp component.h gui.h gui.cpp serializer.cpp serializer.h parts/sensor.cpp parts/sensor.h settings.h parts/plus.cpp parts/plus.h parts/dial.cpp parts/dial.h parts/plus.cpp parts/average.cpp parts/average.h parts.h
         parts/normalizePolygonA.cpp
-        parts/normalizePolygonA.h)
+        parts/normalizePolygonA.h
+        parts/normalizePolygonB.cpp
+        parts/normalizePolygonB.h
+        parts/normalizePolygonC.cpp
+        parts/normalizePolygonC.h)
 #target_compile_options(Analogsim PRIVATE -Wall -Wextra -Wpedantic -Werror)
 target_link_libraries(Analogsim raylib)
