--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,55 +5,60 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Set IMGUI_DIR to the path of the ImGui source directory
 set(IMGUI_DIR libs/imgui)
 include(FetchContent)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Include the ImGui CMakeLists.txt
 find_package(GLFW QUIET)
+find_package(imgui_glfw QUIET)
 
 include_directories(include)
 
 include_directories(libs/glfw/include)
+
+
+
 add_subdirectory(libs/glfw)
 
-#IMGUI
-
-FetchContent_Populate(imgui
-        GIT_REPOSITORY https://github.com/ocornut/imgui.git
-        SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/imgui
-)
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends)
-
-set(OpenGL_GL_PREFERENCE "LEGACY")
-find_package(OpenGL 3 REQUIRED)
-
-add_library(imgui_glfw STATIC
-        imgui/imgui.cpp
-        imgui/imgui_draw.cpp
-        imgui/imgui_demo.cpp
-        imgui/imgui_tables.cpp
-        imgui/imgui_widgets.cpp
-
-        imgui/backends/imgui_impl_glfw.cpp
-        imgui/backends/imgui_impl_opengl3.cpp
-        imgui/backends/imgui_impl_glfw.h
-        imgui/backends/imgui_impl_opengl3.h
-)
-
-target_link_libraries(imgui_glfw PUBLIC glfw ${OPENGL_LIBRARIES})
-
-target_include_directories(imgui_glfw
-        PUBLIC
-        ${CMAKE_CURRENT_LIST_DIR}/imgui
-        ${CMAKE_CURRENT_LIST_DIR}/imgui/backends
-)
-
-FetchContent_Declare(
-        nfd
-        GIT_REPOSITORY https://github.com/btzy/nativefiledialog-extended.git
-)
-FetchContent_MakeAvailable(nfd)
-
 set(CMAKE_CXX_STANDARD 23)
+
+
+#IMGUI
+if(NOT imgui_glfw_FOUND)
+    FetchContent_Populate(imgui
+            GIT_REPOSITORY https://github.com/ocornut/imgui.git
+            SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/imgui
+    )
+
+    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends)
+
+    set(OpenGL_GL_PREFERENCE "LEGACY")
+    find_package(OpenGL 3 REQUIRED)
+
+    add_library(imgui_glfw STATIC
+            imgui/imgui.cpp
+            imgui/imgui_draw.cpp
+            imgui/imgui_demo.cpp
+            imgui/imgui_tables.cpp
+            imgui/imgui_widgets.cpp
+
+            imgui/backends/imgui_impl_glfw.cpp
+            imgui/backends/imgui_impl_opengl3.cpp
+            imgui/backends/imgui_impl_glfw.h
+            imgui/backends/imgui_impl_opengl3.h
+    )
+
+    target_link_libraries(imgui_glfw PUBLIC glfw ${OPENGL_LIBRARIES})
+
+    target_include_directories(imgui_glfw
+            PUBLIC
+            ${CMAKE_CURRENT_LIST_DIR}/imgui
+            ${CMAKE_CURRENT_LIST_DIR}/imgui/backends
+    )
+endif ()
+
+add_subdirectory(libs/nativefiledialog-extended)
+
+
 
 add_executable(
         Analogsim
