--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,8 @@ add_executable(Analogsim src/main.cpp src/main.h src/component.cpp src/component
         src/parts/scaleVector.cpp
         src/parts/scaleVector.h
         src/parts/scaleVector.h
+        src/matrix.cpp
+        src/matrix.h
 )
 #target_compile_options(Analogsim PRIVATE -Wall -Wextra -Wpedantic -Werror)
 target_link_libraries(Analogsim PRIVATE raylib nfd imgui_glfw)
