changed the matrix, but it isn't getting serialized

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,6 @@
             "binaryPath": "/Users/thijme/Documents/GitHub/Analog-sim/main.exe",
             "binaryArgs": []
         }
-    ]
+    ],
+    "docify.commentService.docstringFormat": "Doxygen"
 }
